  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.35 2008/12/29 14:18:42 kakace Exp $
==========================================================================

2.9100
------
2.9102-509  fix: all: Fix OGR-NG middle mark limit miscalculation on odd rulers 

2.9102-508  new: x86: OGR-NG mmx core
            new: cellbe: OGR-NG SPU C core
            new: cuda: RC5-72 core for nVidia CUDA video cards (#4030)
            new: haiku: Added support for Haiku operating system
            fix: beos: Fix bug in network code preventing server communication
            new: cellbe: OGR-NG SPU ASM core
            imp: x86: Identify AMD "Unknown" processors (#4106)
            fix: x86: Pentium M naming (#4075)

2.9101-507  new: all: Added OGR-NG contest 
            chg: x86: RC5-72 core selection (#4072)
            fix: x86: AMD CPU identification (#4073 and others)
            fix: amd64: Fix bug preventing core pre-selection
            imp: amd64: Fix issue preventing multi-processor client
            chg: x86: GO2a core selected as default for P2
            imp: ppc: Recognize PPC5200 (603e based SoC chip)
            imp: amigaos: Use timezone prefs for DST detection on OS4
            imp: ppc: Recognize PPC405 and PPC440 CPU variants


2.9000
------
2.9016-506  new: x86: added new RC5-72 core (GO 2-pipe alt), selected for
                      P4 and Core Duo CPUs.
            fix: cellbe: Memory corruption on heavy background activity
                         when system is low on memory.
            fix: cellbe: Workaround for broken SPU scheduler (#4038).